// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the project card renders correctly when loading is false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BioCard
    data={
        Object {
            "fellow": Object {
              "bio": "",
              "cohort": "Class 10 - KLA",
              "details": Object {
                "actualApprenticeshipStartDate": "2018-12-15",
                "apprenticeshipManager": "Trust Birungi",
                "apprenticeshipTeam": "Watch Tower",
                "expectedApprenticeshipCompletionDate": "2019-03-11",
                "expectedApprenticeshipStartDate": "2018-09-17",
              },
              "email": "cristian.bartell@andela.com",
              "fellow_id": "-LJK1qECFdekucrwqqkh",
              "level": "D0B",
              "lms_id": 1471,
              "location": "Kampala",
              "manager_id": "-LGy4OuPDHCZCZvDuPz0",
              "name": "Cristian Bartell",
              "project": "Watch Tower",
              "start_date": null,
            },
            "loading": false,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="my-bio"
>
          MY PROFILE
</div>,
        <div
          className="card-bio"
          id="fellow-cristian.bartell@andela.com"
          role="button"
          tabIndex="0"
>
          <Unknown>
                    <RenderItem
                              title="Cohort"
                    >
                              Class 10 - KLA
                    </RenderItem>
                    <RenderItem
                              title="Level"
                    >
                              D0B
                    </RenderItem>
                    <RenderItem
                              title="Start Date"
                    >
                              2018-12-15
                    </RenderItem>
                    <RenderItem
                              title="End Date"
                    >
                              2019-03-11
                    </RenderItem>
          </Unknown>
</div>,
      ],
      "className": "bio",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "MY PROFILE",
          "className": "my-bio",
        },
        "ref": null,
        "rendered": "MY PROFILE",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Unknown>
            <RenderItem
                        title="Cohort"
            >
                        Class 10 - KLA
            </RenderItem>
            <RenderItem
                        title="Level"
            >
                        D0B
            </RenderItem>
            <RenderItem
                        title="Start Date"
            >
                        2018-12-15
            </RenderItem>
            <RenderItem
                        title="End Date"
            >
                        2019-03-11
            </RenderItem>
</Unknown>,
          "className": "card-bio",
          "id": "fellow-cristian.bartell@andela.com",
          "role": "button",
          "tabIndex": "0",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <RenderItem
                title="Cohort"
>
                Class 10 - KLA
</RenderItem>,
              <RenderItem
                title="Level"
>
                D0B
</RenderItem>,
              <RenderItem
                title="Start Date"
>
                2018-12-15
</RenderItem>,
              <RenderItem
                title="End Date"
>
                2019-03-11
</RenderItem>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Class 10 - KLA",
                "title": "Cohort",
              },
              "ref": null,
              "rendered": "Class 10 - KLA",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "D0B",
                "title": "Level",
              },
              "ref": null,
              "rendered": "D0B",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "2018-12-15",
                "title": "Start Date",
              },
              "ref": null,
              "rendered": "2018-12-15",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "2019-03-11",
                "title": "End Date",
              },
              "ref": null,
              "rendered": "2019-03-11",
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="my-bio"
>
            MY PROFILE
</div>,
          <div
            className="card-bio"
            id="fellow-cristian.bartell@andela.com"
            role="button"
            tabIndex="0"
>
            <Unknown>
                        <RenderItem
                                    title="Cohort"
                        >
                                    Class 10 - KLA
                        </RenderItem>
                        <RenderItem
                                    title="Level"
                        >
                                    D0B
                        </RenderItem>
                        <RenderItem
                                    title="Start Date"
                        >
                                    2018-12-15
                        </RenderItem>
                        <RenderItem
                                    title="End Date"
                        >
                                    2019-03-11
                        </RenderItem>
            </Unknown>
</div>,
        ],
        "className": "bio",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "MY PROFILE",
            "className": "my-bio",
          },
          "ref": null,
          "rendered": "MY PROFILE",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Unknown>
              <RenderItem
                            title="Cohort"
              >
                            Class 10 - KLA
              </RenderItem>
              <RenderItem
                            title="Level"
              >
                            D0B
              </RenderItem>
              <RenderItem
                            title="Start Date"
              >
                            2018-12-15
              </RenderItem>
              <RenderItem
                            title="End Date"
              >
                            2019-03-11
              </RenderItem>
</Unknown>,
            "className": "card-bio",
            "id": "fellow-cristian.bartell@andela.com",
            "role": "button",
            "tabIndex": "0",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <RenderItem
                  title="Cohort"
>
                  Class 10 - KLA
</RenderItem>,
                <RenderItem
                  title="Level"
>
                  D0B
</RenderItem>,
                <RenderItem
                  title="Start Date"
>
                  2018-12-15
</RenderItem>,
                <RenderItem
                  title="End Date"
>
                  2019-03-11
</RenderItem>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Class 10 - KLA",
                  "title": "Cohort",
                },
                "ref": null,
                "rendered": "Class 10 - KLA",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "D0B",
                  "title": "Level",
                },
                "ref": null,
                "rendered": "D0B",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "2018-12-15",
                  "title": "Start Date",
                },
                "ref": null,
                "rendered": "2018-12-15",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "2019-03-11",
                  "title": "End Date",
                },
                "ref": null,
                "rendered": "2019-03-11",
                "type": [Function],
              },
            ],
            "type": Symbol(react.fragment),
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the project card renders correctly when loading is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BioCard
    data={
        Object {
            "fellow": Object {},
            "loading": true,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="my-bio"
>
          MY PROFILE
</div>,
        <div
          className="card-bio"
          id="fellow-undefined"
          role="button"
          tabIndex="0"
>
          <Loader />
</div>,
      ],
      "className": "bio",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "MY PROFILE",
          "className": "my-bio",
        },
        "ref": null,
        "rendered": "MY PROFILE",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Loader />,
          "className": "card-bio",
          "id": "fellow-undefined",
          "role": "button",
          "tabIndex": "0",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="my-bio"
>
            MY PROFILE
</div>,
          <div
            className="card-bio"
            id="fellow-undefined"
            role="button"
            tabIndex="0"
>
            <Loader />
</div>,
        ],
        "className": "bio",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "MY PROFILE",
            "className": "my-bio",
          },
          "ref": null,
          "rendered": "MY PROFILE",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Loader />,
            "className": "card-bio",
            "id": "fellow-undefined",
            "role": "button",
            "tabIndex": "0",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
